# sd-perturbed-attention

./: .gitignore  LICENSE  README.md  __init__.py  fdg_nodes.py  guidance_utils.py  mg_nodes.py  nag_forge_utils.py  nag_nodes.py  pag_nodes.py  pag_trt_nodes.py  pag_utils.py  pladis_nodes.py  pladis_utils.py  pyproject.toml  smc_nodes.py  tpg_nodes.py
.github/workflows/: publish.yml
compat/: utils.py
example_workflows/: nag_sdxl.json
examples/: pag-adaptive-comparison.json
scripts/: nag.py  pag.py  pag_forge.py  pag_nodes.py  pag_webui.py  seg.py  swg.py
