[project]
name = "sd-perturbed-attention"
description = "Perturbed-Attention Guidance (PAG), Smoothed Energy Guidance (SEG), Sliding Window Guidance (SWG), PLADIS, Normalized Attention Guidance (NAG) for ComfyUI and SD Forge/reForge."
version = "1.2.8"
license = { text = "MIT License" }

[project.urls]
Repository = "https://github.com/pamparamm/sd-perturbed-attention"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pamparamm"
DisplayName = "sd-perturbed-attention"
Icon = ""
